# varfish-db-downloader

./: -  .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CHANGELOG.rst  LICENSE.txt  Makefile  README.md  Snakefile  Snakefile.old  config.yaml.example  counts20210728.txt  download_urls.yml  environment.frozen-2020-10-23.yaml  environment.yaml  environment.yml  import_versions.tsv  pyproject.toml  requirements.txt  run-slurm.sh  run_slurm.sh  setup.cfg
data/: spec-tpl.yaml
downloads/: Makefile
genes/: README.md
header/: case.tsv  clinvar.tsv  dbsnp.tsv  dbsnp.txt  dbvarsv.txt  dgvgoldstandardsvs.txt  dgvsvs.txt  ensembl_regulatory.txt  ensembltokegg.tsv  exac.tsv  exac.txt  genes.txt  genetokegg.tsv  gnomad.tsv  gnomad_exomes.txt  gnomad_genomes.tsv  gnomad_genomes.txt  helixmtdb.txt  hgmd_public.tsv  hgmd_public.txt  hgnc.tsv  hgnc.txt  hpo.tsv  hpo.txt  kegginfo.tsv  knowngeneaa.tsv  knowngeneaa.txt  mim2gene_medgen.tsv  mtdb.txt  thousand_genomes.tsv  thousand_genomes.txt
rules/: common.smk
scripts/: case.sh  clinvar.sh  coding_regions.sh  dbsnp.sh  dummy.sh  ensembl.sh  exac.sh  features-ensembl-gene-regions.awk  features-refseq-gene-regions.awk  genes-enst-ensg.awk  genes-hgnc-info.jq  genes-integrate-diseases.py  genes-mim2gene.awk  genes-orpha-diseases.py  genes-xlink-hgnc.jq  gnomad.sh  gnomad_exomes.sh  gnomad_genomes.sh  helix-to-vcf.py  hgmd.sh  hgnc.sh  hpo.sh  kegg.sh  knowngeneaa.py  knowngeneaa.sh  omim.sh  reduced-refseq-exons.awk  refseq.sh  refseq_xml_to_json.py  sort-bed.awk  thousand_genomes.sh  vardbs-grch37-strucvar-clinvar.awk  vardbs-grch37-strucvar-dbvar.awk  vardbs-grch37-strucvar-dgv_gs.awk  vardbs-grch37-strucvar-exac.awk  vardbs-grch37-strucvar-g1k.awk  vardbs-strucvar-dgv.awk
snakefiles/: acmg.snake  annos.smk  clinvar.snake  dbsnp.snake  dbvar.snake  dgv.snake  exac.snake  (+28 more)
(+1791 files in other folders)
