[options]
zip_safe = False
packages = find:
install_requires =
    attrs
    cattrs
    loguru
    click
    pyyaml
    requests

[flake8]
exclude =
    .*.py
max-complexity = 18
select = B,C,E,F,W,T4,B9
ignore = E203, E266, E501, W503
max-line-length = 100
application_import_names = snappy_pipeline
import-order-style = google
